import org.gradle.internal.os.OperatingSystem

plugins {
    id 'java'
}

java {
  toolchain {
    languageVersion.set(JavaLanguageVersion.of(17))
  }
}

group 'lexfo'
version '0.0.1'

repositories {
    mavenLocal()
    mavenCentral()
    jcenter()
}



dependencies {
    implementation 'net.portswigger.burp.extensions:montoya-api:2023.5'
    
    // https://mvnrepository.com/artifact/black.ninia/jep
    implementation 'black.ninia:jep:4.1.1'
    implementation 'commons-io:commons-io:2.6'
    // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    implementation 'com.intellij:forms_rt:7.0.3'

    implementation 'org.jetbrains.jediterm:jediterm-pty:2.42'
    implementation 'com.google.guava:guava:31.0.1-jre'
    implementation 'log4j:log4j:1.2.17'
    implementation 'org.jetbrains.pty4j:pty4j:0.12.11'

    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.0-rc2'

    // Hex editor
    // https://bined.exbin.org/library/
    // https://mvnrepository.com/artifact/org.exbin.bined/bined-swing
    implementation 'org.exbin.bined:bined-swing:0.2.0'
    implementation 'org.exbin.auxiliary:paged_data:0.2.0'


}

jar {
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
    duplicatesStrategy = 'exclude'
}

tasks.withType(Copy).all { duplicatesStrategy 'exclude' }

configurations {
    javadocImplementation.extendsFrom implementation
}

javadoc {
    source = sourceSets.main.allJava
    classpath += configurations.javadocImplementation
    options.links(
        "https://portswigger.github.io/burp-extensions-montoya-api/javadoc/",
        "https://bined.exbin.org/library/javadoc/bined-core-0.2.0/",
        "https://bined.exbin.org/library/javadoc/paged_data-0.2.0/",
        "https://bined.exbin.org/library/javadoc/bined-swing-0.2.0/"
    )
    options.memberLevel = JavadocMemberLevel.PRIVATE
    options.addStringOption('Xdoclint:none', '-quiet')
}
